<resources>
    <string name="app_name">Caravan</string>
    <string name="title_activity_maps">Map</string>
    <string name="send">Send</string>
    <string name="create_party">Create a Party</string>
    <string name="party_menu">Party Menu</string>
    <string name="create_car">Create Car</string>
    <string name="maps">Maps</string>
    <string name="settings">Settings</string>
    <string name="food">Food</string>
    <string name="rest">Rest</string>
    <string name="next">Next</string>
    <string name="gas">Gas</string>
    <string name="emergency">Emergency</string>
    <string name="go_to_google_maps">Go to Google Maps</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="change_username">Change Username</string>
    <string name="change_car_name">Change Car Name</string>
    <string name="delete_party">Delete Party</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="dreamteam">DreamTeam</string>
    <string name="batmobile">Batmobile</string>
    <string name="name_of_your_car">Name of your car</string>
    <string name="enter_the_name_of_your_car">Enter the name of your car</string>
    <string name="find_car">Find Car</string>
    <string name="who_s_driving">Who\'s Driving?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="select_color">Select Color</string>
    <string name="create_an_account">Create an account</string>
    <string name="live_maps">Live Maps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="click_here_to_create_an_account">Click here to create an account</string>
    <string name="caravan">Caravan</string>
    <string name="logo">logo</string>
    <string name="make_a_pit_stop">Make a Pit Stop</string>
    <string name="click_here_for_directions">Click here for directions</string>
    <string name="track_your_party">Track Your Party</string>
    <string name="name_your_car">Name Your Car</string>
    <string name="enter_party_name">Enter Party Name</string>
    <string name="find_party">Find Party</string>
    <string name="click_here_to_logout">Click here to logout</string>
    <string name="party_options">Party Options</string>
    <string name="select_map_theme">Select Map Theme</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_party_name">Enter Your Party Name</string>
    <string name="enter_your_destination">Enter Your Destination</string>
</resources>
