<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/emergency_b"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:text="@string/emergency"
        android:background="@android:color/holo_red_dark"
        android:onClick="notifyEmergency"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/live_maps_b"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="148dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="90dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/rest_b"
        android:layout_width="95dp"
        android:layout_height="0dp"
        android:text="@string/rest"
        android:background="@android:color/holo_purple"
        android:onClick="notifyRest"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/food_b"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gas_b" />

    <Button
        android:id="@+id/gas_b"
        android:layout_width="100dp"
        android:layout_height="87dp"
        android:text="@string/gas"
        android:background="@android:color/holo_blue_bright"
        android:onClick="notifyGas"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/food_b"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/food"
        android:background="@android:color/holo_green_light"
        android:onClick="notifyFood"
        app:layout_constraintRight_toLeftOf="@+id/gas_b"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="26dp"
        app:layout_constraintBottom_toBottomOf="@+id/gas_b"
        android:layout_marginEnd="28dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gas_b" />

    <Button
        android:id="@+id/maps_menu_b"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:text="@string/go_to_google_maps"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="mapsRedirect"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/live_maps_b"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/emergency_b"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="18dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/live_maps_b"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="Live Maps"
        android:onClick="mapsPage"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="68dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="18dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>