<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.cmps121.app.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <Button
        android:id="@+id/buttonChangeCarName"
        android:layout_width="219dp"
        android:layout_height="53dp"
        android:text="@string/change_car_name"
        android:background="@android:color/holo_orange_light"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/buttonDeleteParty"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="82dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonDeleteParty"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:text="@string/delete_party"
        android:background="@android:color/holo_red_dark"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/buttonChangeCarName"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="94dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonChangeCarName" />

    <Button
        android:id="@+id/buttonChangeUsername"
        android:layout_width="219dp"
        android:layout_height="53dp"
        android:text="@string/change_username"
        android:background="@android:color/holo_blue_bright"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="92dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
